# P-core

./: .gitignore  README.md
python/: README.md  pyproject.toml
python/benchmarks/: orderbook_levels.py
python/scripts/: prediction-core
python/src/panoptique/: __init__.py  agent_scores.py  artifacts.py  bookmaker.py  cli.py  contracts.py  crowd_flow.py  db.py  evidence.py  gates.py  github_repos.py  live_observer_storage.py  measurement.py  paper_strategies.py  reports.py  repositories.py  shadow_bots.py  snapshots.py  storage_exports.py  summary.py  timescale_diagnostic.py
python/src/prediction_core/: __init__.py  app.py  client.py  notifications.py  orchestrator.py  polymarket_daemon.py  polymarket_execution.py  polymarket_marketdata.py  polymarket_runtime.py  polymarket_stack.py  server.py
python/src/weather_pm/: __init__.py  account_data_sources.py  account_learning.py  account_resolution_coverage.py  account_trades.py  analytics_adapter.py  archetype_backtest.py  calibrated_probability.py  cli.py  (+70 more)
python/tests/: test_account_learning.py  test_agent_f_calibration_interface.py  test_analytics_entities.py  test_analytics_events.py  test_analytics_metrics.py  test_analytics_offline_export.py  test_analytics_scoring.py  test_analytics_text.py  test_app_cli.py  test_artifact_ops.py  test_calibration_metrics.py  test_classify_weather_accounts_window.py  test_cli_score_market.py  test_clickhouse_schema_sql.py  test_clickhouse_writer.py  test_client.py  test_decision.py  test_dynamic_position_sizing.py  test_edge_sizing.py  test_entry_policy.py  test_evaluation_metrics.py  test_execution_amm.py  test_execution_book.py  test_execution_contracts.py  test_execution_costs.py  test_execution_facade.py  test_execution_features.py  test_execution_fees.py  test_execution_models.py  test_execution_parity.py  test_execution_rust_orderbook_wrapper.py  test_external_seed_documents.py  test_grafana_provisioning.py  test_live_readiness_gate.py  test_llm_message_filtering.py  test_market_parser.py  test_miro_seed_export.py  test_nats_events.py  test_notifications.py  test_panoptique_agent_scores.py  (+149 more)
(+682 files in other folders)
