[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prediction-core-python"
version = "0.1.0"
description = "Canonical Python packages for prediction_core"
requires-python = ">=3.11"

[project.scripts]
prediction-core = "prediction_core.app:main"

[project.optional-dependencies]
analytics = ["clickhouse-connect>=0.8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["prediction_core*", "weather_pm*", "panoptique*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
