[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prediction-core-python"
version = "0.1.0"
description = "Canonical Python packages for prediction_core"
requires-python = ">=3.11"

[project.scripts]
prediction-core = "prediction_core.app:main"
panoptique = "panoptique.cli:main"

[project.optional-dependencies]
analytics = ["clickhouse-connect>=0.8.0"]
postgres = ["sqlalchemy>=2.0", "asyncpg>=0.29", "psycopg[binary]>=3.1"]
redis = ["redis>=5.0"]
nats = ["nats-py>=2.7"]
s3 = ["boto3>=1.34"]
polymarket-live = ["py-clob-client>=0.23.0"]
storage = [
    "clickhouse-connect>=0.8.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "nats-py>=2.7",
    "boto3>=1.34",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["prediction_core*", "weather_pm*", "panoptique*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
